--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ main {
   justify-content: center;
   align-items: flex-start;
   transition: 0.5s;
-  mix-blend-mode: difference;
+  mix-blend-mode:exclusion;
 }
 
 .nav-buttons {
@@ -240,7 +240,9 @@ main {
   left: 10%;
   height: 80%;
   width: 80%;
-  background-color: #5484a3;
+/*   background-color: #5484a3; */
+  background-color: #062d3e;
+  box-shadow: 0px 0px 2px 0px #00ffff;
   transform-origin: top;
   border-radius: 15px;
   transform: scale3d(0, 0, 1);
@@ -250,7 +252,8 @@ main {
 
 .nav-button:hover:before {
   transform-origin: right;
-  background-color: #a9ddff;
+/*   background-color: #a9ddff; */
+  background-color: red;
   transform: scale3d(1, 1, 1);
 }
 
