--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ main {
   position: relative;
   background-color: #062d3e;
   background-color: white;
-/*   background-image: radial-gradient(circle at center center, transparent 0%,rgb(255,255,255) 99%),repeating-linear-gradient(0deg, rgb(32,175,255) 0px, rgb(32,175,255) 1px,transparent 1px, transparent 296px),repeating-linear-gradient(90deg, rgb(32,175,255) 0px, rgb(32,175,255) 1px,transparent 1px, transparent 296px),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255)); */
   z-index: 12;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
@@ -64,14 +63,9 @@ main {
 }
 
 .lp-bg {
-  height: 155vh;
-/*   width: 100%; */
+  height: 165vh;
   background-color: white;
-  
 }
-
-
-
 
 .landing-name-holder {
   position: fixed;
@@ -84,19 +78,6 @@ main {
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
   pointer-events: none;
 }
-
-/* .landing-name-holder:before {
-  content: '';
-  position: absolute;
-  top: 10%;
-  left: 20%;
-  height: 25vh;
-  width: 25vh;
-  border-radius: 1000px;
-  box-shadow: 0px 0px 500px rgba(173,216,230, 1);
-  background-color: rgba(173,216,230, 0.3);
-
-} */
 
 .letters {
   position: absolute;
@@ -126,7 +107,7 @@ main {
   color: #062d3e;
   color: #000e13;
   z-index: 8;
-/*   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3); */
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
 .secondary .letter {
@@ -136,60 +117,26 @@ main {
 
 .landing-title {
   position: fixed;
-  top: 64vh;
+  top: 55vh;
   right: 0vw;
   padding-right: 4vw;
   z-index: 10;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
   pointer-events: none;
-  
 }
 
 .landing-title div {
   font-size: 10em;
   margin: 0;
-/*   line-height: 1.5; */
   line-height: 1.35;
   font-family: 'Lora', serif; 
   transform: scale3d(1, 1.8, 1);
   text-align: right;
-/*   text-shadow: -2px -2px 3px rgba(0, 0, 0, 0.1); */
-/*   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1), -2px -2px 3px rgba(255, 255, 255, 1); */
   background-clip: text;
   color: #dccca4;
   color: #000e13;
-/*   color: #062d3e; */
-
-  
 }
-
-.scroll-down {
-  position: fixed;
-  top: 70vh;
-  left: 15vw;
-  z-index: 10;
-  transition: 0.5s;
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-}
-
-.sd-text {
-  color: white;
-  transform: translate3d(0, -180%, 0) rotate3d(0, 0, 1, 90deg);
-  background-color: #062d3e;
-  z-index: 15;
-}
-
-.sd-arrow {
-  margin-top: -150%;
-}
-
-.svg-arrow line {
-  stroke: #062d3e;
-}
-
-
-
 
 
 
@@ -225,7 +172,6 @@ main {
   background-color: transparent;
   position: relative;
   color: white;
-/*   color: #062d3e; */
 }
 
 .nav-button:hover {
@@ -240,7 +186,6 @@ main {
   left: 10%;
   height: 80%;
   width: 80%;
-/*   background-color: #5484a3; */
   background-color: #062d3e;
   box-shadow: 0px 0px 2px 0px #00ffff;
   transform-origin: top;
@@ -252,7 +197,6 @@ main {
 
 .nav-button:hover:before {
   transform-origin: right;
-/*   background-color: #a9ddff; */
   background-color: red;
   transform: scale3d(1, 1, 1);
 }
@@ -276,87 +220,80 @@ main {
 /* ------------- PROJECTS HEADER ------------- */
 .projects-header {
   position: relative;
-  top: 0;
-  left: 5px;
-  z-index: 13;
-  height: 15vh;
-  width: 98vw;
-  pointer-events: none;
-  white-space: nowrap;
-  overflow: hidden;
-  transition: 0.5s;
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-  opacity: 0;
-}
-
-.ph-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-image: linear-gradient(to right, #000e13, transparent, #000e13);
-  transition: 0.5s;
-}
-
-.ph-text1, .ph-text2 {
-  color: white;
-  color: rgba(255, 255, 255, 0.5);
-  position: absolute;
-  left: 0;
-  display: inline-block;
-  white-space: nowrap;
-  font-weight: lighter;
-  font-size: 5em;
-  word-spacing: 5em;
-  animation: horizontal-scroll 10s linear infinite;
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-}
-
-/* .ph-text1 { */
-/*   animation-delay: -5s;  */
-/*   transform: translate3d(0%, 0, 0); */
-/*   transform: translate3d(-36.75%, 0, 0); */
-/* } */
-
-.ph-text2 {
-  color: green;
-  display: none;
-}
-
-@keyframes horizontal-scroll {
-  0% {transform: translate3d(0%, 0%, 0)}
-  100% {transform: translate3d(-36.75%, 0%, 0)}
-}
-
-
-
-.projects-header1 {
-  position: relative;
-  height: 10vh;
+  height: 20vh;
   width: 100%;
   z-index: 14;
+  transform: translate3d(0, -50%, 0);
 }
 
-.ph-text {
-  line-height: 1.35;
-  font-family: 'Lora', serif; 
-  transform: translate3d(25%, -50%, 0) scale3d(1, 1.8, 1);
-  font-size: 10em;
-  color: white;
-/*   transition: 2s; */
-/*   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1); */
+.ph-inner {
+  position: absolute;
+  top: -10vh;
+  left: 0;
+  
+  transition: 0.5s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
+}
+
+.ph-inner:after {
+  content: '';
+  position: absolute;
+  top: -5vh;
+  top: 0;
+  left: 0;
+  height: 40vh;
+  width: 100vw;
+  background-color: #000e13;
+  z-index: -1;
+  transform-origin: center;
+  transform-style: preserve-3d;
+/*   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5), inset 0px 3px 5px rgba(255, 255, 255, 0.3); */
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
   
 }
 
-.ph-text.move-down {
-  animation: move-me 1.5s ease forwards;
+.move-down .ph-inner:after {
+  animation: shrink-me 1s ease forwards;
+/*   transform: scale3d(1, 0.75, 1); */
+}
+
+@keyframes shrink-me {
+  0% {transform: scale3d(1, 1, 1)}
+  100% {transform: scale3d(1, 0.75, 1)}
+}
+
+.ph-text {
+  position: absolute;
+  top: 10vh;
+  left: 0;
+  line-height: 1.35;
+  font-family: 'Lora', serif; 
+/*   transform: scale3d(1, 1.8, 1); */
+  transform: scale3d(0.6, 0.9, 1);
+/*   font-size: 10em; */
+/*   color: white; */
+  width: 100vw;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.phl {
+  color: white;
+  font-size: 10em;
+  font-family: 'Lora', serif; 
+/*   transform: scale3d(0.6, 0.9, 1); */
+}
+
+.move-down .ph-text {
+/*   animation: move-me 1.5s ease forwards; */
 }
 
 @keyframes move-me {
-  0% {transform: translate3d(25%, -50%, 0) scale3d(1, 1.8, 1)}
-  50% {transform: translate3d(25%, 50%, 0) scale3d(1, 0.9, 1)}
-  100% {transform: translate3d(-1.5%, 50%, 0) scale3d(0.6, 0.9, 1)}
+  0% {transform: scale3d(1, 1.8, 1)}
+  50% {transform: scale3d(1, 0.9, 1)}
+  100% {transform: scale3d(0.6, 0.9, 1)}
 }
 
 
@@ -376,17 +313,12 @@ main {
   padding-bottom: 5vh;
   margin-top: -20vh;
   background-color: white;
-  background-color: black;
-  background-color: #000e13;
+/*   background-color: black; */
+/*   background-color: #000e13; */
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
-  z-index: 12;
-/*   border: 5px solid; */
-/*   border-right: 10px solid; */
-/*   border-image: linear-gradient(white, #000e13, #000e13) 0 1 0 1; */
-/*   border-radius: 80px 80px 0px 0px; */
-/*   border-radius: 55px; */
+  z-index: 11;
 }
 
 .projects-container * {
@@ -404,7 +336,20 @@ main {
   margin-bottom: 10vh;
   z-index: 5;
   display: grid;
-  grid-template-areas: "title thumbnail" "description thumbnail" "technologies thumbnail";
+  grid-template-areas: "title thumbnail" "description thumbnail" "technologies thumbnail";  
+}
+
+.project-one-container:after, .project-two-container:after, .project-three-container:after {
+  content: '';
+  position: absolute;
+  top: -2.5vh;
+  left: 7.5vw;
+  height: 35vh;
+  width: 75vw;
+  z-index: -1;
+  background-color: #000e13;
+  border-radius: 2px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5), inset 3px 3px 5px rgba(255, 255, 255, 0.5);
 }
 
 
@@ -442,10 +387,6 @@ main {
   scale: 1.05;
 }
 
-.collapse .thumbnail-image {
-  
-}
-
 .thumbnail-image img {
   width: 120%;
   margin-left: -10%;
@@ -454,7 +395,6 @@ main {
   background-size: cover;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-  
 }
 
 .project-buttons-container {
@@ -619,27 +559,6 @@ main {
   background-color: white; 
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
   box-shadow: 0px 100px 100px rgba(0, 0, 0, 1);
-  
-/*   display: none; */
-}
-
-.about-me-label {
-  height: 30vh;
-  line-height: 30vh;
-  margin-left: 26vw;
-  width: 60vw;
-  text-align: left;
-  z-index: 6;
-  color: white;
-  color: #333333;
-  font-size: 3em;
-  position: absolute;
-  top: 60vh;
-  font-weight: lighter;
-  transition: 0.5s;
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-  display: none;
-  
 }
 
 
@@ -740,41 +659,6 @@ main {
   width: 100vw;
   background-color: #000e13;
   border: 10px solid transparent;
-/*   clip-path: circle(30% at 50% 50%); */
-}
-
-.background-gradient {
-  position: absolute;
-  bottom: 0;
-  height: 300vh;
-  width: 100vw;
-  z-index: -1;
-  transition: 0.75s;
-  pointer-events: none;
-  display: none;
-}
-
-.background-gradient:before {
-  content: '';
-  position: absolute;
-  bottom: 10vh;
-  left: 10vw;
-  height: 70vh;
-  width: 80vw;
-  border: 1px dotted rgba(255, 255, 255, 1);
-  z-index: 1;
-}
-
-.background-gradient:after {
-  content: '';
-  position: absolute;
-  bottom: 55vh;
-  left: 20vw;
-  height: 0vh;
-  width: 60vw;
-  border-top: 1px dotted rgba(255, 255, 255, 1);
-  transform: translate3d(0, 0, 200px);
-  z-index: 1;
 }
 
 .lets-talk-container {
