--- a/style.css
+++ b/style.css
@@ -65,14 +65,16 @@ main {
 }
 
 .lp-bg {
-  height: 165vh;
-  background-color: white;
+  height: 100vh;
+/*   background-color: white; */
+  background-color: #000e13;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 9;
+/*   mix-blend-mode:inherit; */
 }
 
 .lp-bg:after {
@@ -80,14 +82,14 @@ main {
   position: absolute;
   top: 0;
   left: 0;
-  height: 165vh;
+  height: 100vh;
   width: 100vw;
 /*   background-color: red; */
-  background-image: linear-gradient(to bottom, white, teal);
+  background-image: linear-gradient(to bottom, #000e13 20%, transparent);
 /*   background-color: #000e13; */
-  mix-blend-mode:color-dodge;
-/*   mix-blend-mode:luminosity; */
-  
+/*   mix-blend-mode:color-dodge; */
+/*   mix-blend-mode:darken; */
+/*   background-color: rgba(0, 0, 0, 0.8); */
 }
 
 .lp-bg:before {
@@ -95,13 +97,13 @@ main {
   position: absolute;
   top: 0;
   left: 0;
-  height: 165vh;
+  height: 100vh;
   width: 100vw;
 /*   background-color: red; */
 /*   background-image: linear-gradient(to bottom, white, teal); */
 /*   background-color: #000e13; */
 /*   mix-blend-mode:color-dodge; */
-/*   mix-blend-mode:luminosity; */
+/*   mix-blend-mode: multiply; */
   
 }
 
@@ -128,6 +130,9 @@ main {
 /*   font-family: 'Lora', serif;  */
   font-weight: unset;
 /*   text-transform: uppercase; */
+  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.3);
+/*   text-shadow: 0px 0px 15px rgba(255, 255, 255, 1); */
+  color: white;
 }
 
 .line1 {
@@ -148,6 +153,10 @@ main {
   color: #f77f00;
 /*   grid-area: 2/1/auto/span 4; */
   grid-area: 2/1/auto/span 4;
+}
+
+.line3 span {
+  color: white;
 }
 
 .line4 {
@@ -279,7 +288,8 @@ main {
   right: 0;
   z-index: 11;
   padding-right: 2vw;
-  height: 5vh;
+  height: 5.5vh;
+/*   padding-top: 0.25vh; */
   width: 100%;
   display: flex;
   flex-flow: row nowrap;
@@ -305,10 +315,11 @@ main {
 
 .circle-around-name {
   position: absolute;
-  top: 0;
+  top: 1px;
   left: -1.2vh;
   height: 5vh;
   width: 6vh;
+  padding: 0.1em;
   fill: transparent;
   stroke: #f77f00;
   stroke-width: 3px;
@@ -380,11 +391,15 @@ main {
   color: white;
 }
 
+.nav-button p {
+  color: white;
+}
+
 .nav-button:hover {
   cursor: pointer;
 }
 
-.nav-button:before {
+/* .nav-button:before {
   content: '';
   position: absolute;
   z-index: -1;
@@ -392,8 +407,7 @@ main {
   left: 10%;
   height: 80%;
   width: 80%;
-  background-color: #062d3e;
-/*   box-shadow: 0px 0px 2px 0px #00ffff; */
+  background-color: rgba(255, 255, 255, 0.1);
   border: 2px solid #f77f00;
   transform-origin: top;
   border-radius: 15px;
@@ -404,7 +418,6 @@ main {
 
 .nav-button:hover:before {
   transform-origin: right;
-/*   background-color: red; */
   transform: scale3d(1, 1, 1);
 }
 
@@ -414,8 +427,25 @@ main {
 
 .high-contrast .nav-button {
   color: white;
+} */
+
+
+.nav-svg {
+  position: absolute;
+  top: 0.5vh;
+  left: 20%;
+  height: 4vh;
+  width: 60%;
+  fill: transparent;
+  stroke: #f77f00;
+  stroke-width: 3px;
+  stroke-dasharray: 0,25;
+  transition: 0.5s;
 }
 
+.nav-svg:hover {
+  stroke-dasharray: 25,0;
+}
 
 
 
@@ -436,7 +466,7 @@ main {
 .ph-inner {
 /*   position: absolute; */
   position: relative;
-  top: -10vh;
+  top: 0vh;
   left: 0;
   height: 20vh;
   width: 100vw;
@@ -451,12 +481,12 @@ main {
   left: 0;
   height: 30vh;
   width: 100vw;
-  background-color: #000e13;
+/*   background-color: #000e13; */
   z-index: -1;
   transform-origin: center;
   transform-style: preserve-3d;
 /*   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5), inset 0px 3px 5px rgba(255, 255, 255, 0.3); */
-  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
+/*   box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5); */
   
 }
 
@@ -477,7 +507,7 @@ main {
   line-height: 1.35;
   font-family: 'Lora', serif; 
 /*   transform: scale3d(1, 1.8, 1); */
-  transform: scale3d(0.6, 0.9, 1);
+/*   transform: scale3d(0.6, 0.9, 1); */
 /*   font-size: 10em; */
 /*   color: white; */
   width: 100vw;
@@ -488,8 +518,8 @@ main {
 }
 
 .phl {
-  color: white;
-  font-size: 10em;
+/*   color: white; */
+  font-size: 5em;
   font-family: 'Lora', serif; 
 /*   transform: scale3d(0.6, 0.9, 1); */
 }
@@ -517,35 +547,99 @@ main {
   height: 220vh;
   width: 99.5%;
   position: relative;
-  padding-top: 50vh;
+  padding-top: 30vh;
   padding-bottom: 5vh;
   margin-top: -20vh;
   background-color: white;
+/*   background-image: linear-gradient(to bottom, transparent, white 10%); */
+/*   background-image: linear-gradient(to bottom, red, blue 30%); */
 /*   background-color: black; */
 /*   background-color: #000e13; */
+  box-shadow: 0 -150px 100px 25px rgba(0, 0, 0, 1);
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
   z-index: 11;
 }
 
+.projects-container:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 70vw;
+  height: 100%;
+  width: 1px;
+  background-image: linear-gradient(to top, transparent, rgba(0, 0, 0, 0.3), transparent);
+}
+
+.projects-container:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 30vw;
+  height: 100%;
+  width: 1px;
+  background-image: linear-gradient(to top, transparent, rgba(0, 0, 0, 0.3), transparent);
+}
+
 .projects-container * {
   color: white;
+/*   color: black; */
 }
 
 .project-one-container, .project-two-container, .project-three-container {
   position: relative;
   top: 0%;
-  left: 15vw;
-  border-radius: 15px;
+  left: 30vw;
+/*   border-radius: 15px; */
   transition: 0.5s;
-  height: 30vh;
-  width: 70vw;
-  padding-left: 2vw;
-  margin-bottom: 10vh;
+  height: 40vh;
+  width: 40vw;
+/*   padding-top: 3%; */
+/*   padding-left: 3%; */
+/*   padding-right: 3%; */
+  padding: 3%;
+/*   padding-left: 2vw; */
+/*   margin-bottom: 10vh; */
   z-index: 5;
   display: grid;
-  grid-template-areas: "title thumbnail" "description thumbnail" "technologies thumbnail";  
+  align-items: space-evenly;
+/*   grid-template-areas: "title thumbnail" "description thumbnail" "technologies thumbnail"; */
+  grid-template-areas: "title" "description" "buttons" "technologies";
+/*   background-color: #000e13; */
+/*   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5), inset 3px 3px 5px rgba(255, 255, 255, 0.4); */
+  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.5);
+  
+}
+
+.project-one-container, .project-three-container {
+  left: 32vw;
+}
+
+.project-two-container {
+  left: 28vw;
+}
+
+.project-two-container .project-title, .project-two-container .project-description {
+  text-align: left;
+}
+
+.project-two-container .project-description {
+  padding-right: 35%;
+  padding-left: 0%;
+}
+
+.project-two-container .thumbnail-image img {
+  margin-left: 0%;
+}
+
+.project-two-container .project-buttons-container {
+  justify-content: flex-start;
+}
+
+.project-two-container .project-buttons {
+  margin-right: 0;
+  margin-left: 0.5em;
 }
 
 .project-one-container:after, .project-two-container:after, .project-three-container:after {
@@ -559,15 +653,18 @@ main {
   background-color: #000e13;
   border-radius: 2px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5), inset 3px 3px 5px rgba(255, 255, 255, 0.4);
+  display: none;
 }
 
 
 
 .project-thumbnail {
-  height: 30vh;
-  width: 30vw;
-  position: relative;
-  margin-left: 2vw;
+  height: 40vh;
+  width: 100%;
+/*   position: relative; */
+  position: absolute;
+/*   margin-top: 2%; */
+/*   margin-left: 2%; */
   background-color: white;
   z-index: 5;
   background-repeat: no-repeat;
@@ -576,29 +673,51 @@ main {
   opacity: 0;
   transition: 1s;
   transition-delay: 0.7s;
+/*   border-radius: 15px 15px 0px 0px; */
+}
+
+.project-thumbnail:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  transition: 0.5s;
+/*   background-image: linear-gradient(to top, transparent, #000e13); */
+/*   box-shadow: inset 0 0 150px #000e13; */
+/*   box-shadow: inset 0 0 50px rgba(255, 255, 255, 1); */
 }
 
 .thumbnail-image {
-  height: 30vh;
-  width: 30vw;
+  height: 100%;
+  width: 100%;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   overflow: hidden;
   overflow: hidden;
   pointer-events: none;
-  position: relative;
+/*   position: relative; */
   transition: 0.5s;
+/*   border-radius: 15px 15px 0px 0px; */
 }
 
 .expand .thumbnail-image img {
   filter: blur(5px);
-  scale: 1.05;
+/*   scale: 1.05; */
+}
+
+.expand .project-thumbnail:after {
+/*   background-color: rgba(0, 0, 0, 0); */
 }
 
 .thumbnail-image img {
-  width: 120%;
-  margin-left: -10%;
+/*   width: 120%; */
+  width: 170%;
+  margin-top: -10%;
+  margin-left: -70%;
   background-repeat: repeat-y;
   background-position: center;
   background-size: cover;
@@ -607,15 +726,20 @@ main {
 }
 
 .project-buttons-container {
-  height: 30vh;
-  width: 30vw;
-  position: absolute;
+  grid-area: buttons;
+  height: 10vh;
+/*   width: 30vw; */
+/*   position: absolute; */
+  bottom: 0;
+/*   padding-left: 3%; */
   z-index: 15;
   display: flex;
-  justify-content: space-evenly;
+/*   justify-content: space-evenly; */
+  justify-content: flex-end;
   align-items: center;
-  opacity: 0;
+/*   opacity: 0; */
   transition: 0.5s;
+  
 }
 
 .expand .project-buttons-container {
@@ -627,15 +751,34 @@ main {
   border: none;
   background-color: transparent;
   background-color: #000e13;
+  position: relative;
   display: flex;
   align-items: center;
   font-size: 1em;
+/*   line-height: 1em; */
   text-decoration: none;
+/*   font-family: 'Lora', serif;  */
+/*   text-transform: lowercase; */
   height: 5vh;
   padding: 15px;
-  padding: 5px;
-  transition: 0.5s;
-  opacity: 0.7;
+  margin-right: 0.5em;
+/*   padding: 5px; */
+  transition: 0.3s;
+  opacity: 0.5;
+  overflow: hidden;
+}
+
+.project-buttons:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #f77f00;
+  transition: 0.3s;
+  transform: translate3d(-100%, 0, 0);
+  transform-origin: left;
 }
 
 .project-buttons:hover {
@@ -645,30 +788,43 @@ main {
   opacity: 1;
 }
 
+.expand .project-buttons:hover:after {
+  transform: translate3d(100%, 0, 0);
+  
+}
+
+
 .project-title {
   transition-delay: 0.35s;
   font-family: 'Montserrat', sans-serif;
   font-size: 3em;
-  font-weight: lighter;
+/*   font-weight: lighter; */
   white-space: nowrap;
   grid-area: title;
-  height: 10vh;
-  width: 30vw;
+  height: 6vh;
+/*   width: 90%; */
+/*   margin-top: -12vh; */
+/*   position: absolute; */
+/*   top: 0; */
+/*   padding-left: 5%; */
 /*   margin-left: 10vw; */
   text-align: right;
 /*   line-height: 12vh; */
+  z-index: 10;
   opacity: 0;
   transition: 1s;
+  pointer-events: none;
 }
 
 .project-title:after {
   content: '';
   position: absolute;
-  top: 7vh;
-  left: 12vw;
+  top: 30vh;
+  left: 3vw;
   height: 2px;
-  width: 20vw;
+  width: 14vw;
 /*   background-color: #e57f17; */
+  display: none;
 }
 
 .project-one-container .project-title:after {
@@ -686,29 +842,33 @@ main {
 .project-description {
   transition-delay: 0.45s;
   line-height: 1.7;
-  font-size: 1.3em;
+  font-size: 1.1em;
   text-align: right;
   grid-area: description;
   height: 15vh;
-  width: 30vw;
+/*   width: 20vw; */
 /*   margin-left: 10vw; */
-  padding-left: 5%;
-/*   padding-right: 5%; */
+/*   padding-left: 5%; */
+  padding-left: 35%;
   opacity: 0;
   transition: 1s;
   transition-delay: 0.5s;
-  color: rgba(255, 255, 255, 0.7);
+  z-index: 10;
+  pointer-events: none;
+/*   color: rgba(255, 255, 255, 0.7); */
 }
 
 .project-technologies {
   height: 5vh;
-  width: 30vw;
-  text-align: right;
+  width: 20vw;
+  text-align: center;
 /*   margin-left: 10vw; */
+  margin-bottom: 10vh;
   line-height: 8vh;
   opacity: 0;
   transition: 1s;
   transition-delay: 0.35s;
+  display: none;
 }
 
 .tech-icon {
@@ -789,15 +949,16 @@ main {
 /*   height: 30vh; */
   width: 80vw;
 /*   width: 100vw; */
-  top: -20%;
+  top: -10%;
 /*   right: 10%; */
   left: 10vw;
   position: absolute;
   z-index: 5;
-  background-color: white;
+/*   background-color: rgba(0, 150, 255, 0.1); */
   border-radius: 100px;
 /*   background-color: #000e13; */
 /*   box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.25); */
+/*   box-shadow: inset 3px 3px 5px rgba(0, 0, 0, 0.5), 3px 3px 5px rgba(255, 255, 255, 0.4); */
   display: flex;
   align-items: center;
   transition: 0.5s;
