--- a/style.css
+++ b/style.css
@@ -945,17 +945,21 @@ main {
 }
 
 .about-me-body {
-  height: 60vh;
+  height: 66vh;
 /*   height: 30vh; */
-  width: 80vw;
+  width: 86vw;
 /*   width: 100vw; */
   top: -10%;
 /*   right: 10%; */
-  left: 10vw;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  padding-top: 3vh;
+  padding-bottom: 3vh;
+  left: 7vw;
   position: absolute;
   z-index: 5;
 /*   background-color: rgba(0, 150, 255, 0.1); */
-  border-radius: 100px;
+/*   border-radius: 100px; */
 /*   background-color: #000e13; */
 /*   box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.25); */
 /*   box-shadow: inset 3px 3px 5px rgba(0, 0, 0, 0.5), 3px 3px 5px rgba(255, 255, 255, 0.4); */
@@ -976,39 +980,69 @@ main {
   flex-flow: column nowrap;
 /*   align-items: center; */
   justify-content: space-evenly;
-  color: #000e13;
+/*   color: #000e13; */
   transition: 0.75s;
 /*   background-color: #000e13; */
-  
+/*   border: 2px dashed black; */
   
 }
 
 .am-sentence {
   text-align: left;
 /*   position: absolute; */
-/*   background-color: white; */
-    transition: 0.75s;
+  background-color: white;
+  transition: 0.5s;
+/*   transition-delay: 1s; */
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-  opacity: 0;
+/*   opacity: 0; */
+/*   color: white; */
+  padding: 0.25em;
+/*   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); */
 }
 
 .ams1 {
   z-index: 14;
+/*   transform: translate3d(20%, 110%, 0); */
 }
 
 .ams2 {
   z-index: 13;
-  transform: translate3d(0, -100%, 0);
+/*   transform: translate3d(0, -100%, 0); */
+  opacity: 0;
 }
 
 .ams3 {
   z-index: 12;
-  transform: translate3d(0, -100%, 0);
+/*   transform: translate3d(0, -100%, 0); */
+/*   transform: scale3d(0, 1, 1); */
+  transform-origin: left;
 }
 
 .ams4 {
   z-index: 11;
-  transform: translate3d(0, -100%, 0);
+/*   transform: scale3d(1, 0, 1); */
+  transform-origin: top;
+}
+
+
+.am-body-content-pseudo {
+  position: absolute;
+  height: 60vh;
+  width: 80vw;
+/*   border: 3px solid orange; */
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  font-size: 3em;
+}
+
+.am-sentence-pseudo {
+  text-align: left;
+  color: transparent;
+  background-color: #000e13;
+  padding: 0.25em;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+  transition: 0.5s;
 }
 
 
