--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-  height: 495vh;
+  height: 470vh;
   background-color: #062d3e;
   background-color: black;
   background-color: #000e13;
@@ -32,7 +32,7 @@ body {
 
 main {
   position: fixed;
-  height: 380vh;
+  height: 355vh;
   top: 0;
   left: 0;
   transition: 0.5s;
@@ -51,7 +51,7 @@ main {
 .landing-page {
   height: 155vh;
   height: 100vh;
-  margin-bottom: 25vh;
+/*   margin-bottom: 25vh; */
   position: relative;
 /*   background-color: #062d3e; */
 /*   background-color: white; */
@@ -67,7 +67,7 @@ main {
 .lp-bg {
   height: 100vh;
 /*   background-color: white; */
-  background-color: #000e13;
+/*   background-color: #000e13; */
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
   position: fixed;
@@ -297,16 +297,20 @@ main {
   justify-content: flex-end;
   align-items: flex-start;
   transition: 0.5s;
+  overflow: hidden;
 /*   mix-blend-mode:exclusion; */
-  background-color: #000e13;
-  background-color: black;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+/*   background-color: #000e13; */
+/*   background-color: black; */
+/*   background-color: white; */
+/*   background-color: #333333; */
+/*   box-shadow: 0px 0px 10px rgba(0, 0, 0, 1); */
+/*   border-bottom: 1px solid black; */
 }
 
 .navbar-name {
   line-height: 5vh;
   font-size: 1.5em;
-  color: white;
+/*   color: white; */
 /*   text-shadow: 2px 2px 3px rgba(176, 224, 230, 0.7); */
   position: fixed;
   top: 0;
@@ -390,7 +394,7 @@ main {
   border: none;
   background-color: transparent;
   position: relative;
-  color: white;
+/*   color: white; */
 }
 
 .nav-button p {
@@ -401,36 +405,27 @@ main {
   cursor: pointer;
 }
 
-/* .nav-button:before {
+.show-projects:after {
   content: '';
   position: absolute;
-  z-index: -1;
-  bottom: 5%;
-  left: 10%;
-  height: 80%;
-  width: 80%;
-  background-color: rgba(255, 255, 255, 0.1);
-  border: 2px solid #f77f00;
-  transform-origin: top;
-  border-radius: 15px;
-  transform: scale3d(0, 0, 1);
-  transition: 0.5s;
-  opacity: 0.7;
+  top: 0;
+  right: 0;
+  height: 110%;
+  width: 1%;
+  background-color: white;
+  transform: skewX(-20deg);
 }
 
-.nav-button:hover:before {
-  transform-origin: right;
-  transform: scale3d(1, 1, 1);
+.show-about-me:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 110%;
+  width: 1%;
+  background-color: white;
+  transform: skewX(-20deg);
 }
-
-.toggleMe .nav-buttons {
-  transform: translate3d(0, 0%, 0);
-}
-
-.high-contrast .nav-button {
-  color: white;
-} */
-
 
 .nav-svg {
   position: absolute;
@@ -468,7 +463,7 @@ main {
 .ph-inner {
 /*   position: absolute; */
   position: relative;
-  top: 0vh;
+  top: 15vh;
   left: 0;
   height: 20vh;
   width: 100vw;
@@ -512,7 +507,8 @@ main {
 /*   transform: scale3d(0.6, 0.9, 1); */
 /*   font-size: 10em; */
 /*   color: white; */
-  width: 100vw;
+  padding-left: 10%;
+  width: 90vw;
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
@@ -520,9 +516,9 @@ main {
 }
 
 .phl {
-/*   color: white; */
-  font-size: 5em;
-  font-family: 'Lora', serif; 
+  color: white;
+  font-size: 3em;
+/*   font-family: 'Lora', serif;  */
 /*   transform: scale3d(0.6, 0.9, 1); */
 }
 
@@ -552,16 +548,21 @@ main {
   padding-top: 30vh;
   padding-bottom: 5vh;
   margin-top: -20vh;
-  background-color: white;
+/*   background-color: white; */
+  background-color: #333333;
 /*   background-image: linear-gradient(to bottom, transparent, white 10%); */
 /*   background-image: linear-gradient(to bottom, red, blue 30%); */
 /*   background-color: black; */
 /*   background-color: #000e13; */
-  box-shadow: 0 -150px 100px 25px rgba(0, 0, 0, 1);
+/*   box-shadow: 0 -150px 100px 25px rgba(0, 0, 0, 1); */
+/*   box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5); */
   display: flex;
   flex-flow: column nowrap;
   justify-content: space-evenly;
   z-index: 11;
+  transform: translate3d(-50%, 0, 0) skewX(50deg);
+  transition: 0.75s;
+  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
 }
 
 .projects-container:before {
@@ -571,7 +572,7 @@ main {
   left: 70vw;
   height: 100%;
   width: 1px;
-  background-image: linear-gradient(to top, transparent, rgba(0, 0, 0, 0.3), transparent);
+  background-image: linear-gradient(to top, transparent, rgba(255, 255, 255, 0.3), transparent);
 }
 
 .projects-container:after {
@@ -581,7 +582,7 @@ main {
   left: 30vw;
   height: 100%;
   width: 1px;
-  background-image: linear-gradient(to top, transparent, rgba(0, 0, 0, 0.3), transparent);
+  background-image: linear-gradient(to top, transparent, rgba(255, 255, 255, 0.3), transparent);
 }
 
 .projects-container * {
@@ -915,43 +916,45 @@ main {
 
 /* ----------- ABOUT ME HEADER ------------ */
 .about-me-header {
-  height: 50vh;
-  width: 30%;
+  height: 70vh;
+  width: 50%;
   position: absolute;
-  top: 335vh;
+  top: 315vh;
   transition: 0.2s;
   z-index: 12;
   transition: 0.5s;
-  background-color: white; 
+/*   background-color: #333333;  */
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
 }
 
-.about-me-header:before {
+/* .about-me-header:before {
   content: '';
   position: absolute;
   top: 10vh;
   left: 30vw;
   height: 100%;
   width: 1px;
-  background-image: linear-gradient(to top, transparent, rgba(0, 0, 0, 0.3), transparent);
+  background-image: linear-gradient(to top, transparent, #00babb, transparent);
 }
 
 .about-me-header:after {
   content: '';
   position: absolute;
-  top: 50vh;
+  top: 70vh;
   left: -50vw;
   height: 1px;
   width: 90vw;
-  background-image: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.3), transparent);
-}
+  background-image: linear-gradient(to right, transparent, #00babb, transparent);
+} */
 
 .about-me-label {
   font-size: 3em;
-  font-family: 'Lora', serif; 
-  text-align: right;
+/*   font-family: 'Lora', serif;  */
+/*   text-align: right; */
   padding-right: 1em;
   line-height: 90vh;
+/*   color: #00babb; */
+  color: #000e13;
 }
 
 
@@ -965,47 +968,24 @@ main {
 /* -------------- ABOUT ME -------------- */
 .about-me-container {
   height: 150vh;
-  width: 100vw;
+  width: 50vw;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
   position: relative;
   z-index: 11;
-/*   background-color: white; */
-}
-
-.about-me-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
   background-color: white;
-  transition: 0.5s;
-  transform: rotateZ(180deg);
-  opacity: 0;
-}
-
-.about-me-bg:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-image: linear-gradient(to top, orange, transparent);
-/*   background-color: #00babb; */
-  mix-blend-mode:color-dodge;
-  mix-blend-mode:overlay;
 }
 
 .about-me-body {
   height: 50vh;
-/*   height: 30vh; */
-  width: 100vw;
-  top: 40vh;
+/*   height: 100vh; */
+/*   width: 50vw; */
+  top: 0;
 /*   right: 10%; */
-  padding-left: 30vw;
+/*   padding-left: 30vw; */
+  padding-left: 10%;
+  padding-right: 10%;
   left: 0;
   position: absolute;
   z-index: 5;
@@ -1015,33 +995,11 @@ main {
 /*   box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.25); */
 /*   box-shadow: inset 3px 3px 5px rgba(0, 0, 0, 0.5), 3px 3px 5px rgba(255, 255, 255, 0.4); */
   display: flex;
-  align-items: center;
-  transition: 0.5s;
-  transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-}
-
-.am-body-content {
-/*   padding: 10%; */
-  position: relative;
-  height: 100%;
-  width: 80vw;
-  font-size: 2em;
-  margin-top: -60vh;
-/*   line-height: 27px; */
-  padding-top: 3vh;
-  padding-bottom: 3vh;
-  padding-left: 3vw;
-  padding-right: 15vw;
-  display: flex;
   flex-flow: column nowrap;
 /*   align-items: center; */
-  justify-content: space-evenly;
-/*   color: #000e13; */
+  justify-content: center;
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
-/*   background-color: #000e13; */
-/*   border: 2px dashed black; */
-/*   background-color: white; */
 }
 
 .am-sentence {
@@ -1052,9 +1010,10 @@ main {
 /*   transition-delay: 1s; */
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
 /*   opacity: 0; */
-/*   color: white; */
-  padding: 0.25em;
+  color: #000e13;
+  padding: 0.75em;
 /*   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); */
+  font-size: 1.5em;
 }
 
 .ams1 {
@@ -1079,28 +1038,6 @@ main {
   z-index: 11;
 /*   transform: scale3d(1, 0, 1); */
   transform-origin: top;
-}
-
-
-.am-body-content-pseudo {
-  position: absolute;
-  height: 60vh;
-  width: 80vw;
-/*   border: 3px solid orange; */
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-evenly;
-  font-size: 3em;
-  opacity: 0;
-}
-
-.am-sentence-pseudo {
-  text-align: left;
-  color: transparent;
-  background-color: #000e13;
-  padding: 0.25em;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  transition: 0.5s;
 }
 
 
@@ -1138,20 +1075,28 @@ main {
 .contact-card-bg {
   position: fixed;
   z-index: 9;
-  bottom: -40vh;
+  bottom: -0vh;
   left: 0;
   height: 150vh;
   width: 100vw;
   padding-top: 50vh;
-  background-color: white;
+  /*! background-color: white; */
 /*   background-color: #000e13; */
 /*   background-color: #005c6b; */
 /*   border: 10px solid transparent; */
-  opacity: 0;
+/*   opacity: 0; */
 /*   box-shadow: inset 0px 0px 300px 300px rgba(0, 0, 0, 1); */
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
 /*   display: none; */
+  mask-image: linear-gradient(
+    0deg, 
+    rgba(0,0,0,1) 0%, 
+    rgba(0,0,0,1) 10%, 
+    rgba(0,0,0,0) 30%, 
+    rgba(0,0,0,0) 40%, 
+    rgba(0,0,0,1) 60%, 
+    rgba(0,0,0,1) 100%);
 }
 
 .contact-card-bg:before {
@@ -1161,7 +1106,7 @@ main {
   left: 0;
   height: 100%;
   width: 100%;
-  background-image: linear-gradient(to top, transparent, #000e13);
+  /*! background-image: linear-gradient(to top, transparent, #000e13); */
 /*   background-color: #00babb; */
   mix-blend-mode:color-burn;
   mix-blend-mode:color-burn;
@@ -1234,7 +1179,8 @@ main {
   transition: 0.5s;
   transition-timing-function: cubic-bezier(0.05, 0.30, 0.48, 1);
   opacity: 0;
-/*   background-color: #000e13; */
+  background-color: #000e13;
+  background-color: #333333;
 /*   transform: translate3d(0, 100%, 0); */
   overflow: hidden;
 }
@@ -1612,3 +1558,4 @@ i:hover {
   }
 }
 
+/*  */
