--- a/style.css
+++ b/style.css
@@ -1760,15 +1760,61 @@ main:after {
     width: 34%;
   }
   .landing-introduction {
-/*     padding-right: 20px; */
     left: 10vw;
+    height: 20vh;
   }
   .introduction {
     font-size: 20px;
     white-space: nowrap;
   }
+  .project-header-text {
+    padding-left: 10vw;
+  }
   .project-one-container, .project-two-container, .project-three-container {
     left: 10vw;
+    height: unset;
+    grid-template-areas: "title" "thumbnail" "description" "buttons" "technologies";
+/*     margin-bottom: 20vh; */
+  }
+  .project-thumbnail {
+    width: unset;
+    height: 200px;
+  }
+  .project-title {
+    height: unset;
+    width: unset;
+    margin-top: 0;
+  }
+  .proj-title-line {
+    top: 50%;
+  }
+    .project-description {
+    height: unset;
+    width: unset;
+  }
+  .project-buttons-container {
+    height: unset;
+    width: unset;
+  }
+  .about-me-container {
+    width: 100vw;
+    background-color: transparent;
+  }
+  .about-me-label {
+    font-size: 2em;
+  }
+  .am-sentence {
+    font-size: 20px;
+    text-shadow: 0px 0px 20px rgba(0,0,0, 0.5);
+  }
+  .contact-section {
+    width: 100vw;
+  }
+  .contact-me-label {
+    font-size: 40px;
+  }
+  .contact-sect-email {
+    font-size: 10px;
   }
 }
 
